--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
-    "node-cron": "^2.0.3",
+    
     "nodemailer": "^6.4.16",
     "nodemon": "^2.0.7",
+    "opencollective-postinstall": "^2.0.3",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
