--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     
     "nodemailer": "^6.4.16",
     "nodemon": "^2.0.7",
-    
+    "opencollective-postinstall": "^2.0.3",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
@@ -45,7 +45,8 @@
   "scripts": {
     "test": "nodemon app.js",
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "postinstall": "opencollective-postinstall"
   },
   "engines": {
     "node": "14.x"
